kubernetes/apps/ai/whisper-cpu/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisper
  namespace: ai
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: whisper
  template:
    metadata:
      labels:
        app: whisper
    spec:
      containers:
        - name: whisper
          image: fedirz/faster-whisper-server@sha256:760e5e43d427dc6cfbbc4731934b908b7de9c7e6d5309c6a1f0c8c923a5b6030
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 4Gi
              cpu: "2"
            limits:
              memory: 6Gi
          volumeMounts:
            - name: cache
              mountPath: /root/.cache/huggingface
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: whisper-pvc
