kubernetes/apps/ai/whisper-cpu/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisper
  namespace: ai
spec:
  selector:
    app: whisper
  ports:
    - port: 8000
      targetPort: 8000
